src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CLDY_Template_Display_Section__c</fullName>
        <label>Template Display Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Custom Solution</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Project Related Fee</fullName>
                </value>
                <value>
                    <fullName>Recurring Fee</fullName>
                </value>
                <value>
                    <fullName>Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Third Party Products or Services</fullName>
                </value>
                <value>
                    <fullName>Perform CAD System</fullName>
                </value>
                <value>
                    <fullName>Perform Mobile System</fullName>
                </value>
                <value>
                    <fullName>Perform Law Records System</fullName>
                </value>
                <value>
                    <fullName>Perform Fire Records System</fullName>
                </value>
                <value>
                    <fullName>Perform Admin System</fullName>
                </value>
                <value>
                    <fullName>Perform Third Party Products and Services</fullName>
                </value>
                <value>
                    <fullName>Perform Project Related Fees</fullName>
                </value>
                <value>
                    <fullName>Perform Annual Maintenance</fullName>
                </value>
                <value>
                    <fullName>Respond Billing</fullName>
                </value>
                <value>
                    <fullName>Respond CAD</fullName>
                </value>
                <value>
                    <fullName>Respond ePCR</fullName>
                </value>
                <value>
                    <fullName>TriTech.com Billing</fullName>
                </value>
                <value>
                    <fullName>TriTech.com ePCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLDY_Template_Display_SubSection__c</fullName>
        <description>This field is used to group together products that will be show in the same subsection in the quote template.</description>
        <label>Template Display SubSection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform CAD Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Inform MOBILE Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Inform RMS Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Inform FBR Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Inform Jail Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Inform IQ Software License Fee</fullName>
                </value>
                <value>
                    <fullName>CAD Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>Mobile Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>Fire Software License Fee</fullName>
                </value>
                <value>
                    <fullName>Fire Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>911 Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>RMS Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>FBR Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>Jail Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>IQ Implementation Service Fee</fullName>
                </value>
                <value>
                    <fullName>Project Related Fee</fullName>
                </value>
                <value>
                    <fullName>Perform CAD Software</fullName>
                </value>
                <value>
                    <fullName>Perform CAD Services</fullName>
                </value>
                <value>
                    <fullName>Perform Mobile Software</fullName>
                </value>
                <value>
                    <fullName>Perform Mobile Services</fullName>
                </value>
                <value>
                    <fullName>Perform Law Records System Software</fullName>
                </value>
                <value>
                    <fullName>Perform Law Records System Services</fullName>
                </value>
                <value>
                    <fullName>Perform Fire Records System Software</fullName>
                </value>
                <value>
                    <fullName>Perform Fire Records System Services</fullName>
                </value>
                <value>
                    <fullName>Perform Admin System</fullName>
                </value>
                <value>
                    <fullName>Perform Admin System Software</fullName>
                </value>
                <value>
                    <fullName>Perform Admin System Services</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Custom Solution</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLDY_Template_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CLDY Template Product Category</label>
        <referenceTo>CLDY_Template_Product_Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item Price</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee Service</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Custom 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Custom Hardware</fullName>
                </value>
                <value>
                    <fullName>Custom Integrated Solution</fullName>
                </value>
                <value>
                    <fullName>Custom Product Modification</fullName>
                </value>
                <value>
                    <fullName>Custom Recurring</fullName>
                </value>
                <value>
                    <fullName>Custom Services</fullName>
                </value>
                <value>
                    <fullName>Annual Subscription</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual Subscription</fullName>
                </value>
                <value>
                    <fullName>Annual Support</fullName>
                </value>
                <value>
                    <fullName>Perpetual License</fullName>
                </value>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Travel_Calc_NON_Fixed__c</fullName>
        <description>Estimated travel costs for this specific non-remote service</description>
        <formula>((325.00* Travel_days_incl_travel_to_the_site__c * Num_of_staff_traveling_per_trip_incl_PM__c * Num_of_trips__c ) + ( Num_of_trips__c * 600.00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated travel costs for non-remote service.  This is non-fixed travel calculations.  For fixed travel, add 30%.</inlineHelpText>
        <label>Est Travel Calc (NON-Fixed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Browser</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Data Vault</fullName>
                </value>
                <value>
                    <fullName>Detective</fullName>
                </value>
                <value>
                    <fullName>FBR</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Fire RMS</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>IQ</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Law RMS</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>MNHS</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>Respond Billing</fullName>
                </value>
                <value>
                    <fullName>Respond CAD</fullName>
                </value>
                <value>
                    <fullName>Respond ePCR</fullName>
                </value>
                <value>
                    <fullName>TriTech.com Billing</fullName>
                </value>
                <value>
                    <fullName>TriTech.com ePCR</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_Cost__c</fullName>
        <label>GSA Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSA_Discount_Applied__c</fullName>
        <label>GSA Discount Applied</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GSA_List_Price__c</fullName>
        <label>GSA List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSA_Part_Number__c</fullName>
        <label>GSA Part Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSA_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if include in GSA Price Book</description>
        <label>GSA Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_Product_Description__c</fullName>
        <inlineHelpText>This product&apos;s description specifically designated for the GSA pricelist</inlineHelpText>
        <label>GSA Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GSA_Product_Name__c</fullName>
        <inlineHelpText>This product&apos;s name specifically designated for the GSA pricelist</inlineHelpText>
        <label>GSA Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GSA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GuidedSelling__NeedsSync__c</fullName>
        <description>A comparison formula to see if the product needs to be synced to the GuidedSelling database</description>
        <formula>if(LastModifiedDate &gt; GuidedSelling__SyncDate__c || ISBLANK(GuidedSelling__SyncDate__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NeedsSync</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GuidedSelling__SyncDate__c</fullName>
        <description>Datestamp used by GuidedSelling to manage product synchronization</description>
        <label>SyncDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inform_Cost__c</fullName>
        <label>Inform Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inform_List_Price__c</fullName>
        <label>Inform List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inform_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if included in Inform Price Book</description>
        <label>Inform Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Custom_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Sub_type__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Subscription</fullName>
                </value>
                <value>
                    <fullName>Client Interface License</fullName>
                </value>
                <value>
                    <fullName>Concurrent User License</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Data Conversion</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Domain Controllers</fullName>
                </value>
                <value>
                    <fullName>GIS</fullName>
                </value>
                <value>
                    <fullName>Go Live Support</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Integrated Solution</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PBX</fullName>
                </value>
                <value>
                    <fullName>Per Agency License</fullName>
                </value>
                <value>
                    <fullName>Peripheral</fullName>
                </value>
                <value>
                    <fullName>Per PSAP License</fullName>
                </value>
                <value>
                    <fullName>Per Seat Software License</fullName>
                </value>
                <value>
                    <fullName>Per System Module</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Server Interface License</fullName>
                </value>
                <value>
                    <fullName>Server Software License</fullName>
                </value>
                <value>
                    <fullName>Service Subscription</fullName>
                </value>
                <value>
                    <fullName>Software Assurance</fullName>
                </value>
                <value>
                    <fullName>Software Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Software Base</fullName>
                </value>
                <value>
                    <fullName>Software Ancillary Modules</fullName>
                </value>
                <value>
                    <fullName>Software Interfaces</fullName>
                </value>
                <value>
                    <fullName>Software DR and Test/Training</fullName>
                </value>
                <value>
                    <fullName>Software Subscriptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Warranty_Cost__c</fullName>
        <label>Item Warranty Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Part_Number__c</fullName>
        <label>Manufacturer Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_staff_traveling_per_trip_incl_PM__c</fullName>
        <label># of staff traveling per trip incl PM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_trips__c</fullName>
        <label># of trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverrideSupportLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverrideSupportLevel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Part_Number__c</fullName>
        <label>Parent Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perform_Cost__c</fullName>
        <label>Perform Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perform_List_Price__c</fullName>
        <label>Perform List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perform_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if include in the Perform Price Book</description>
        <label>Perform Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Uom__c</fullName>
        <label>Price Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status_WMP__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Selling</fullName>
                </value>
                <value>
                    <fullName>Supported</fullName>
                </value>
                <value>
                    <fullName>Unsupported</fullName>
                </value>
                <value>
                    <fullName>Sunsetting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>AVeL</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>EMS CAD</fullName>
                </value>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>FDC</fullName>
                </value>
                <value>
                    <fullName>Fusion ePCR</fullName>
                </value>
                <value>
                    <fullName>Fusion Online</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>IQ</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond CAD</fullName>
                </value>
                <value>
                    <fullName>SBS</fullName>
                </value>
                <value>
                    <fullName>Sweet-Online</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>VisionCAD</fullName>
                </value>
                <value>
                    <fullName>VisionCONNECT</fullName>
                </value>
                <value>
                    <fullName>VisionDASHBOARD</fullName>
                </value>
                <value>
                    <fullName>VisionDATAVAULT</fullName>
                </value>
                <value>
                    <fullName>VisionFBR</fullName>
                </value>
                <value>
                    <fullName>VisionFIRE</fullName>
                </value>
                <value>
                    <fullName>VisionFORCE</fullName>
                </value>
                <value>
                    <fullName>VisionGIS</fullName>
                </value>
                <value>
                    <fullName>VisionINFORM</fullName>
                </value>
                <value>
                    <fullName>VisionJAIL</fullName>
                </value>
                <value>
                    <fullName>VisionLMS</fullName>
                </value>
                <value>
                    <fullName>VisionMOBILE</fullName>
                </value>
                <value>
                    <fullName>VisionRMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rapid_Implementation_Cost__c</fullName>
        <label>Rapid Implementation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rapid_Implementation_List_Price__c</fullName>
        <label>Rapid Implementation List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rapid_Implementation_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rapid Implementation Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Respond_Cost__c</fullName>
        <label>Respond Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Respond_List_Price__c</fullName>
        <label>Respond List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Respond_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respond Price Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIN__c</fullName>
        <description>GSA Special Identification Numbers</description>
        <inlineHelpText>GSA Special Identification Numbers</inlineHelpText>
        <label>SIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>132-8 Hardware</fullName>
                </value>
                <value>
                    <fullName>132-12 HW Maintenance</fullName>
                </value>
                <value>
                    <fullName>132-32 Subscription</fullName>
                </value>
                <value>
                    <fullName>132-33 SW License</fullName>
                </value>
                <value>
                    <fullName>132-34 SW Maintenance</fullName>
                </value>
                <value>
                    <fullName>132-50 Training</fullName>
                </value>
                <value>
                    <fullName>132-51 IT Professional Services</fullName>
                </value>
                <value>
                    <fullName>Open Market Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Order_Category__c</fullName>
        <label>Sales Order Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other - 3rd Party Software</fullName>
                </value>
                <value>
                    <fullName>Other - 3rd Party Support</fullName>
                </value>
                <value>
                    <fullName>Other - Bonds &amp; L/C</fullName>
                </value>
                <value>
                    <fullName>Other - Data Conversion</fullName>
                </value>
                <value>
                    <fullName>Other - Escrow</fullName>
                </value>
                <value>
                    <fullName>Other - Hardware</fullName>
                </value>
                <value>
                    <fullName>Other - Hardware Support</fullName>
                </value>
                <value>
                    <fullName>Other - Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Other - Shipping</fullName>
                </value>
                <value>
                    <fullName>Other - Software Maintenance</fullName>
                </value>
                <value>
                    <fullName>Other - Subcontract</fullName>
                </value>
                <value>
                    <fullName>Other - Subcontract Support</fullName>
                </value>
                <value>
                    <fullName>Other - Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Other - System Integration</fullName>
                </value>
                <value>
                    <fullName>Other - Travel</fullName>
                </value>
                <value>
                    <fullName>Other - TriCon Fees</fullName>
                </value>
                <value>
                    <fullName>Services - Integrated Solutions</fullName>
                </value>
                <value>
                    <fullName>Services - Other Service Revenue</fullName>
                </value>
                <value>
                    <fullName>Services - Project &amp; Installation</fullName>
                </value>
                <value>
                    <fullName>Services - Project Management</fullName>
                </value>
                <value>
                    <fullName>Services - Services</fullName>
                </value>
                <value>
                    <fullName>Services - Software Modification</fullName>
                </value>
                <value>
                    <fullName>Services - Training</fullName>
                </value>
                <value>
                    <fullName>Software - Billing</fullName>
                </value>
                <value>
                    <fullName>Software - CAD</fullName>
                </value>
                <value>
                    <fullName>Software - Discount</fullName>
                </value>
                <value>
                    <fullName>Software - FBR</fullName>
                </value>
                <value>
                    <fullName>Software - Fire</fullName>
                </value>
                <value>
                    <fullName>Software - Fusion ePCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>